# openapi-bridge

./: .copier-answers.yml  .gitignore  Cargo.toml  act.toml  build.rs  justfile
.github/workflows/: ci.yml
e2e/: info.hurl  list_tools.hurl  petstore.hurl
src/: lib.rs  request.rs  spec.rs  tools.rs
wit/: act-core.wit
