[package]
name = "openapi-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = { version = "0.54", features = ["async-spawn"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
schemars = "1"
act-types = "0.2.3"
url = "2"
http = "1"
wasi-fetch = "0.1"

[build-dependencies]
ciborium = "0.2"
act-types = "0.2.3"
serde_json = "1"

[lib]
crate-type = ["cdylib"]
