[package]
name = "openapi-bridge"
description = "Dynamically exposes OpenAPI endpoints as ACT tools"
version = "0.1.4"
edition = "2024"

[package.metadata.act.std.capabilities."wasi:http"]
description = "Dynamically exposes OpenAPI endpoints as ACT tools; calls whatever hosts the loaded spec declares."

[[package.metadata.act.std.capabilities."wasi:http".allow]]
host = "*"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
schemars = "1"
act-types = "0.5"
url = "2"
http = "1"
wasi-fetch = "0.1.3"
wit-bindgen = { version = "0.57", features = ["async-spawn"] }
convert_case = "0.11"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]
